--- a/astro/src/components/BaseHead.astro
+++ b/astro/src/components/BaseHead.astro
@@ -17,6 +17,8 @@ const image = new URL(Astro.props.image || './social.png', Astro.site);
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 
+<!-- Favicon -->
+<link rel="icon" href="/favicon.svg" type="image/x-icon" />
 
 <!-- Primary Meta Tags -->
 <title>{title || settings.title}</title>
