nearly final commit

--- a/astro/src/layouts/Base.astro
+++ b/astro/src/layouts/Base.astro
@@ -18,7 +18,7 @@ const { seo } = Astro.props;
   </head>
   <body class="font-inter">
     <slot name="header" />
-    <main class="bg-gradient-to-br from-yellow-300 from-40% via-purple-300 min-h-screen">
+    <main class="bg-gradient-to-r from-purple-200 to-violet-100 min-h-screen pb-8">
     <Navbar />
       <slot />
     </main>
