--- a/astro/src/components/BlogPostPreview.astro
+++ b/astro/src/components/BlogPostPreview.astro
@@ -9,10 +9,11 @@ const { post } = Astro.props;
 ---
 
 <article class="post-preview__article">
-    <a href={`/blog/${post.slug.current}`}>
+    <a href={`/works/${post.slug.current}`}>
       {post.mainImage && <img width="720" height="420" class="post-main__img" loading="lazy" src={getSanityImageURL(post.mainImage).url()} />}
-      <h1 class="title">{post.title}</h1>
-      <time class="publish-date">{formatBlogPostDate(post.publishedAt)}</time>
-      <p>{post.excerpt}</p>
+      <h1 class="title">Title: {post.title}</h1>
+      <time class="publish-date">Date: {formatBlogPostDate(post.publishedAt)}</time>
+      <p>Excerpt: {post.excerpt}</p>
+      <p>By {post.author.id}</p>
     </a>
 </article>
