--- a/astro/src/pages/404.astro
+++ b/astro/src/pages/404.astro
@@ -3,8 +3,7 @@ import Layout from '../layouts/Page.astro';
 import Container from '../components/Container.astro';
 
 const seo = {
-  title: 'Uh Oh! Page Not Found',
-  description: 'This is a starter repo for an blog built with Astro including open graph tags, canonical urls, RSS, sitemap support.',
+  title: 'Intersectionality Club | Page Not Found',
 }
 
 ---
