--- a/astro/src/layouts/Base.astro
+++ b/astro/src/layouts/Base.astro
@@ -3,6 +3,7 @@ import BaseHead from "../components/BaseHead.astro";
 import type { Props as BaseHeadProps } from '../components/BaseHead.astro';
 import '@fontsource/inter';
 import Navbar from "../components/ui/Navbar";
+import logo from "../inter-logo.svg";
 
 export interface Props {
 	seo?: BaseHeadProps;
@@ -18,8 +19,40 @@ const { seo } = Astro.props;
   </head>
   <body class="font-inter">
     <slot name="header" />
-    <main class="bg-gradient-to-r from-purple-200 to-violet-100 min-h-screen pb-8">
-    <Navbar />
+    <main class="bg-white min-h-screen px-2 pb-10">
+    <>
+    <nav class="mb-6">
+      {/* Logo */}
+      <div class="flex justify-center">
+        <img src={logo} alt="Intersectionality Club logo" class="w-9/12 md:w-1/3 "/>
+      </div>
+
+			<div class="border border-black h-0.5 w-full my-2"/>
+      
+			<ul class="flex justify-center text-lg">
+				<li class="mx-2">
+					<a href="/">Home</a>
+				</li>
+				<li class="mx-2">
+					<a href="/works">
+						Works
+					</a>
+				</li>
+				<li class="mx-2">
+					<a href="/resources">
+						Resources
+					</a>
+				</li>
+				<li class="mx-2">
+					<a href="/get-involved">
+						Get involved
+					</a>
+				</li>
+			</ul>
+			{/* Vertical bar */}
+			<div class="border border-black h-0.5 w-full my-2"/>
+		</nav>
+    </>
       <slot />
     </main>
     <slot name="footer" />
