--- a/astro/src/pages/get-involved.astro
+++ b/astro/src/pages/get-involved.astro
@@ -9,12 +9,12 @@ const seo = {
 ---
 
 <Layout seo={seo}>
-	<div class="mx-auto prose">
-		<h1>Get involved!</h1>
+	<div class="mx-auto w-3/5">
+		<h1 class="text-4xl text-red-600 font-black my-2">Get involved!</h1>
 
-		<h2>Our members</h2>
+		<h2 class="text-2xl text-blue-600 font-black my-2">Our team members</h2>
 
-		<p>
+		<p  class="text-lg text-justify mt-4">
 			<span class="italic">Audrey Tang (founder and head):</span> Audrey is an international student
 			at Middlesex School from Hong Kong. As a neurodivergent woman with ADHD, she
 			is very interested in the impact of DEI, intersectionality, and politics on
@@ -22,11 +22,11 @@ const seo = {
 			works as a writer, singer, dancer, and actress.
 		</p>
         
-        <p>
+        <p  class="text-lg text-justify mt-4">
             <span class="italic">Ema Edwards (head):</span> to be added (for now if you need a substitute just copy paste Audrey’s)
         </p>
 
-		<p>
+		<p  class="text-lg text-justify mt-4">
 			<span class="italic">Harrison Huang (publications manager):</span> Harrison is a junior at Middlesex. Besides being an
 			boarding international student from Nanjing, China, he is also a pianist,
 			painter, skier, and trilingual (Mandarin, English, French). Though an
