--- a/astro/src/layouts/Base.astro
+++ b/astro/src/layouts/Base.astro
@@ -2,8 +2,8 @@
 import BaseHead from "../components/BaseHead.astro";
 import type { Props as BaseHeadProps } from '../components/BaseHead.astro';
 import '@fontsource/inter';
-import Navbar from "../components/ui/Navbar";
-import logo from "../inter-logo.svg";
+import { Image } from 'astro:assets';
+import myLogo from "../inter-logo.svg";
 
 export interface Props {
 	seo?: BaseHeadProps;
@@ -24,7 +24,7 @@ const { seo } = Astro.props;
     <nav class="mb-6">
       {/* Logo */}
       <div class="flex justify-center">
-        <img src={logo} alt="Intersectionality Club logo" class="w-9/12 md:w-1/3 "/>
+        <Image src={myLogo} alt="Intersectionality Club logo" class="w-9/12 md:w-1/3 "/>
       </div>
 
 			<div class="border border-black h-0.5 w-full my-2"/>
