--- a/astro/src/layouts/Base.astro
+++ b/astro/src/layouts/Base.astro
@@ -15,6 +15,10 @@ const { seo } = Astro.props;
 <html lang="en">
   <head>
     <BaseHead {...seo} />
+	<script>
+  window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+</script>
+<script defer src="/_vercel/insights/script.js"></script>
     <slot name="head-bottom" />
   </head>
   <body class="font-inter">
