--- a/astro/src/pages/index.astro
+++ b/astro/src/pages/index.astro
@@ -7,51 +7,26 @@ import myHeader from "../inter-header.jpg";
 
 <Layout>
  	<div class="flex justify-center">
-        <Image src={myHeader} alt="Intersectionality Club logo" class="w-3/5 mb-4"/>
+        <Image src={myHeader} alt="Intersectionality Club logo" class="w-3/5 pb-4"/>
       </div>
 	<div class="mx-auto w-3/5">
-		<h1 class="text-4xl text-red-600 font-black my-4">Who are we?</h1>
-		<p class="text-lg text-justify">
-			Founded in 2022, Intersectionality Club is a student-led organization
-			based in Middlesex School, Concord. The club hosts periodic meetings to
-			facilitate conversations about various issues and their correlations to
-			identity and experience, with the goal of providing a more nuanced outlook
-			on said issues. Part of our efforts include the Intersectionality Club
-			Column, published monthly both online and in Middlesex School’s newspaper
-			the Anvil, and our online publication Prism, with biannual issue releases.
+		<h1 class="text-4xl text-red-600 font-black py-6">Who are we?</h1>
+		<p class="text-lg md:text-justify">
+			Founded in 2022, Intersectionality Club is a student-led organization based in Middlesex School, Concord. The club hosts periodic meetings to facilitate conversations about various issues and their correlations to identity and experience, with the goal of providing a more nuanced outlook on said issues. Part of our efforts include the Intersectionality Club Column, published both online and in Middlesex School’s newspaper the Anvil, and our online publication Prism, with annual issue releases.  
 		</p>
 
-		<h1 class="text-4xl text-blue-600 font-black text-right my-4">Mission Statement</h1>
-		<p class="text-lg text-justify">
-			Intersectionality Club aims to provide a nuanced lens through which one
-			may analyze issues correlating to identity and experience. By providing an
-			educational space where participants may engage, share, and learn, we
-			strive to spread awareness of the concept of intersectionality and its
-			impact on communities and individuals alike. In particular, the club seeks
-			to uplift and amplify historically excluded groups by pushing for
-			diversity, equity, and inclusion in both large and small communities
-			alike. Apart from working within Middlesex, it is the club’s goal to help
-			communities disadvantaged by their intersecting identities globally.
+		<h1 class="text-4xl text-blue-600 font-black text-right py-6">Mission Statement</h1>
+		<p class="text-lg md:text-justify">
+			Intersectionality Club aims to provide a nuanced lens through which one may analyze issues correlating to identity and experience. By providing an educational space where participants may engage, share, and learn, we strive to spread awareness of the concept of intersectionality and its impact on communities and individuals alike. In particular, the club seeks to uplift and amplify historically excluded groups by pushing for diversity, equity, and inclusion in all spaces. Apart from working within Middlesex, it is the club’s goal to help communities disadvantaged by their intersecting identities globally.
 		</p>
 
-		<h1 class="text-4xl text-red-600 font-black my-4">What is Intersectionality?</h1>
-		<p class="text-lg text-justify">
-			Intersectionality is an analytical framework that recognizes the impact of
-			overlapping identities on individuals’ experiences. It takes into account
-			the nuance of these experiences, especially in regards to discrimination
-			predominantly based on race, ethnicity, nationality, class, gender, gender
-			identity, sexual orientation, ability, religion, age, weight, physical
-			appearance, and more. Because of the combined effects of these identities,
-			individuals must confront different degrees of oppression and privilege in
-			their lives. However, it is important to note that intersectionality is
-			not just about oppression and privilege; it encompasses everything in an
-			individual’s identity that makes them who they are.
+		<h1 class="text-4xl text-red-600 font-black py-6">What is Intersectionality?</h1>
+		<p class="text-lg md:text-justify">
+			Intersectionality is an analytical framework that recognizes the impact of overlapping identities on individuals’ experiences. It takes into account the nuance of these experiences, especially in regards to discrimination predominantly based on race, ethnicity, nationality, class, gender, gender identity, sexual orientation, ability, religion, age, weight, physical appearance, and more. Because of the combined effects of these identities, individuals must confront different degrees of oppression and privilege in their lives. However, it is important to note that intersectionality is not just about oppression and privilege; it encompasses everything in an individual’s identity that makes them who they are. 
+
 		</p>			
-		<p class="text-lg text-justify mt-4">
-			The idea of intersectionality has long been in existence, but the term was
-			not officially coined until 1989, when scholar and black feminist Kimberlé
-			Crenshaw pointed out the varying forms of discrimination individuals with overlapping
-			identities faced.
+		<p class="text-lg md:text-justify py-6">
+			The idea of intersectionality has long been in existence, but the term was not officially coined until 1989, when scholar and black feminist Kimberlé Crenshaw pointed out the varying forms of discrimination individuals with overlapping identities faced. 
 		</p>
 	</div>
 </Layout>
