--- a/astro/src/pages/works.astro
+++ b/astro/src/pages/works.astro
@@ -1,18 +1,24 @@
 ---
 // Component Imports
 import Layout from "../layouts/Page.astro";
+import { Image } from 'astro:assets';
+import myHeader from "../prism-header.png";
 
 const seo = {
 	title: "Intersectionality Club | Prism",
 	description:
-		"This is a starter repo for an blog built with Astro including open graph tags, canonical urls, RSS, sitemap support.",
+		"The Intersectionality Club's publication - Prism",
 };
 
 ---
 
 <Layout seo={seo}>
+	<div class="flex justify-center">
+        <Image src={myHeader} alt="Intersectionality Club logo" class="pb-4 w-5/12"/>
+      </div>
+
 	<div class="mx-auto w-3/5">
-		<h1 class="text-4xl text-red-600 font-black my-2">About the publication</h1>
+		<h1 class="text-4xl text-red-600 font-black py-6">About the publication</h1>
 		<p class="text-lg text-justify">
 			<strong class="text-xl text-blue-600">PRISM</strong> is Intersectionality Club’s online publication consisting
 			of student works on identity and experience. This publication acts as a platform
@@ -29,7 +35,7 @@ const seo = {
 			together and exacerbate each other.”
 		</p>
 
-		<h1 class="text-4xl text-red-600 font-black my-2">Submission Guidelines</h1>
+		<h1 class="text-4xl text-red-600 font-black py-2">Submission Guidelines</h1>
 		<p class="text-lg text-justify">
 			We recognize that identities intersect and are fundamentally
 			interconnected, making every individual different in their own unique way.
