--- a/astro/src/pages/get-involved.astro
+++ b/astro/src/pages/get-involved.astro
@@ -14,25 +14,32 @@ const seo = {
 
 		<h2 class="text-2xl text-blue-600 font-black my-2">Our team members</h2>
 
-		<p  class="text-lg text-justify mt-4">
-			<span class="italic">Audrey Tang (founder and head):</span> Audrey is an international student
-			at Middlesex School from Hong Kong. As a neurodivergent woman with ADHD, she
-			is very interested in the impact of DEI, intersectionality, and politics on
-			both a communal and individual level, and incorporates that passion into her
-			works as a writer, singer, dancer, and actress.
+		<p class="text-lg text-justify mt-4">
+			<span class="italic">Audrey Tang (founder and head):</span> Audrey is an
+			international student at Middlesex School from Hong Kong. As a
+			neurodivergent woman with ADHD, she is very interested in the impact of
+			DEI, intersectionality, and politics on both a communal and individual
+			level, and incorporates that passion into her works as a writer, singer,
+			dancer, and actress.
 		</p>
-        
-        <p  class="text-lg text-justify mt-4">
-            <span class="italic">Ema Edwards (head):</span> to be added (for now if you need a substitute just copy paste Audrey’s)
-        </p>
 
-		<p  class="text-lg text-justify mt-4">
-			<span class="italic">Harrison Huang (publications manager):</span> Harrison is a junior at Middlesex. Besides being an
-			boarding international student from Nanjing, China, he is also a pianist,
-			painter, skier, and trilingual (Mandarin, English, French). Though an
-			introvert, Harrison deeply values connections with other people and
-			understands people's feelings. As an INFJ, he can be both a realist and an
-			idealist, emotional and logical, and playful and thoughtful.
+		<p class="text-lg text-justify mt-4">
+			<span class="italic">Ema Edwards (head):</span> Ema is an open-minded,
+			enthusiastic Senior at Middlesex. Her home is San Francisco, California,
+			but she grew up in Chicago, Illinois and for much of her life, she
+			considered Japan her home. Ema is passionate about psychology and
+			thoroughly enjoys literature, often engaging in complex conversations
+			about any topic with her close friends.
+		</p>
+
+		<p class="text-lg text-justify mt-4">
+			<span class="italic">Harrison Huang (publications manager):</span>
+			Harrison is a junior at Middlesex. Besides being an boarding international
+			student from Nanjing, China, he is also a pianist, painter, skier, and
+			trilingual (Mandarin, English, French). Though an introvert, Harrison
+			deeply values connections with other people and understands people's
+			feelings. As an INFJ, he can be both a realist and an idealist, emotional
+			and logical, and playful and thoughtful.
 		</p>
 	</div>
 </Layout>
