--- a/astro/src/pages/works.astro
+++ b/astro/src/pages/works.astro
@@ -18,6 +18,181 @@ const seo = {
 			class="pb-4 w-5/12"
 		/>
 	</div>
+	<div class="flex justify-center">
+	<button
+		class="modal-open bg-transparent border border-gray-500 hover:border-blue-600 text-gray-500 hover:text-blue-600 font-bold py-2 px-2 rounded-full"
+		>About the publication & Submission Guidlines
+	</button>
+</div>
+
+	<div class="mx-auto">
+		<style>
+			.modal {
+				transition: opacity 0.25s ease;
+			}
+			body.modal-active {
+				overflow-x: hidden;
+				overflow-y: visible !important;
+			}
+			.opacity-95 {
+				opacity: 0.95;
+			}
+
+			.center {
+				margin: 0;
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				-ms-transform: translate(-50%, -50%);
+				transform: translate(-50%, -50%);
+			}
+		</style>
+
+		<!--Modal-->
+		<div
+			class="modal opacity-0 pointer-events-none fixed w-full h-full top-0 left-0 flex items-center justify-center"
+		>
+			<div class="modal-overlay absolute w-full h-full bg-white opacity-95">
+			</div>
+
+			<div class="modal-container fixed w-full h-full z-50 overflow-y-auto">
+				<div
+					class="modal-close absolute top-0 right-0 cursor-pointer flex flex-col items-center mt-4 mr-4 text-black text-sm z-50"
+				>
+					<svg
+						class="fill-current text-black"
+						xmlns="http://www.w3.org/2000/svg"
+						width="18"
+						height="18"
+						viewBox="0 0 18 18"
+					>
+						<path
+							d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z"
+						></path>
+					</svg>
+					 (Esc)
+				</div>
+
+				<!-- Add margin if you want to see grey behind the modal-->
+				<div class="modal-content container mx-auto h-auto text-left p-4">
+					<!--Body-->
+					<div class="mx-auto w-3/5">
+						<h1 class="text-4xl text-red-600 font-black py-6">
+							About the publication
+						</h1>
+						<p class="text-lg text-justify">
+							<strong class="text-xl text-blue-600">PRISM</strong> is
+							Intersectionality Club’s online publication consisting of student
+							works on identity and experience. This publication acts as a
+							platform for the amplification of diverse voices, and as a medium
+							through which students can share their individual stories.
+						</p>
+						<p class="text-lg text-justify mt-2">
+							We decided on the name Prism because we believe such an object
+							reflects the fundamental concept of intersectionality. Just as the
+							unique qualities of a prism come from its overlap of colors
+							within, every individual’s identities and experiences intersect
+							and affect their story. The name is also inspired by civil rights
+							advocate Kimberlé Crenshaw’s quote that intersectionality is a
+							"prism, for seeing the way in which various forms of inequality
+							often operate together and exacerbate each other.”
+						</p>
+
+						<h1 class="text-4xl text-red-600 font-black py-2">
+							Submission Guidelines
+						</h1>
+						<p class="text-lg text-justify">
+							We recognize that identities intersect and are fundamentally
+							interconnected, making every individual different in their own
+							unique way. We would like to highlight individual experiences and
+							provide an online platform with which everyone can share their
+							voices, opinions, and perspectives. In order to make using this
+							platform a comfortable experience for everyone, here are the
+							guidelines for submission:
+							<ol class="indent-4 text-base">
+								<li>
+									Submissions may take any form: painting, photography, short
+									films, personal narrative, poetry, journalistic articles, etc.
+								</li>
+								<li>
+									For writing pieces, you may use first person, because it is
+									your own narrative!
+								</li>
+								<li>
+									Word limit: Literary works should not exceed the 3000 word
+									limit.
+								</li>
+								<li>
+									Do not appropriate content that is not yours. In other words,
+									use your own experience and ideas rather than resorting to
+									plagiarism.
+								</li>
+								<li>
+									Give your piece a title---it will draw the attention of the
+									reader/viewer!
+								</li>
+								<li>
+									If you choose to remain anonymous, please let the editors know
+									your preference.
+								</li>
+							</ol>
+						</p>
+					</div>
+
+					<!--Footer-->
+					<div class="flex justify-end pt-2">
+						<button
+							class="px-4 bg-transparent p-3 rounded-lg text-indigo-500 hover:bg-gray-100 hover:text-indigo-400 mr-2"
+							>Action</button
+						>
+						<button
+							class="modal-close px-4 bg-indigo-500 p-3 rounded-lg text-white hover:bg-indigo-400"
+							>Close</button
+						>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<script>
+			var openmodal = document.querySelectorAll(".modal-open");
+			for (var i = 0; i < openmodal.length; i++) {
+				openmodal[i].addEventListener("click", function (event) {
+					event.preventDefault();
+					toggleModal();
+				});
+			}
+
+			const overlay = document.querySelector(".modal-overlay");
+			overlay.addEventListener("click", toggleModal);
+
+			var closemodal = document.querySelectorAll(".modal-close");
+			for (var i = 0; i < closemodal.length; i++) {
+				closemodal[i].addEventListener("click", toggleModal);
+			}
+
+			document.onkeydown = function (evt) {
+				evt = evt || window.event;
+				var isEscape = false;
+				if ("key" in evt) {
+					isEscape = evt.key === "Escape" || evt.key === "Esc";
+				} else {
+					isEscape = evt.keyCode === 27;
+				}
+				if (isEscape && document.body.classList.contains("modal-active")) {
+					toggleModal();
+				}
+			};
+
+			function toggleModal() {
+				const body = document.querySelector("body");
+				const modal = document.querySelector(".modal");
+				modal.classList.toggle("opacity-0");
+				modal.classList.toggle("pointer-events-none");
+				body.classList.toggle("modal-active");
+			}
+		</script>
+	</div>
 
 	<!-- <div class="mx-auto w-3/5">
 		<h1 class="text-4xl text-red-600 font-black py-6">About the publication</h1>
@@ -86,7 +261,8 @@ const seo = {
 				<br />
 
 				 I come from grandparents speaking three languages my feeble ears fail to
-				comprehend <br />
+				comprehend
+				<br />
 				 But I want to <br />
 				 Pooja rooms, black and white albums of families who existed across the
 				world <br />
